Removed .open from lines 67 and 73 in the CSS. It did not fix the burger nav on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,13 +64,13 @@ body {
 .header nav ul.open {
     height: auto;
 }
-.header nav ul.open li {
+.header nav ul li {
     text-align: center;
     width: 100%;
     margin: 0;
 }
 
-.header nav ul.open li a {
+.header nav ul li a {
     color: #fff;
     padding: 10px;
     border-bottom: 1px solid #404040;
